--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Fruitful Farm is Coming Soon!</h1>
+        <h1>Fruitful Farming is Coming Soon!</h1>
         <p>We're working on something great and can't wait to share it with you. Stay tuned!</p>
         <a href="mailto:hello@fruitfulfarm.ing">Email Us</a>
     </div>
