--- a/index.html
+++ b/index.html
@@ -3,63 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon - Fruitful Farm</title>
+    <title>Coming Soon - Fruitful Farming</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: #f7f7f7;
-            flex-direction: column;
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #ffffff;
         }
         .container {
             text-align: center;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
         h1 {
-            color: #333;
+            font-family: 'Ubuntu', sans-serif;
+            color: #ade488;
         }
         p {
-            color: #555;
+            color: #d4d4d4;
         }
         a {
             display: inline-block;
             padding: 10px 20px;
             margin-top: 20px;
-            background: #008000;
+            background: #76b947;
             color: white;
             text-decoration: none;
             border-radius: 5px;
+            transition: transform 0.3s ease;
         }
         a:hover {
-            background: #005700;
+            transform: scale(1.05);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
         }
         footer {
             text-align: center;
             width: 100%;
             padding: 10px 0;
-            background: #e0e0e0;
-            color: #333;
+            background: rgba(0, 0, 0, 0.7);
+            color: #fff;
             font-size: 0.75em;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Fruitful Farming is Coming Soon!</h1>
-        <p>We're working on something great and can't wait to share it with you. Stay tuned!</p>
-        <a href="mailto:hello@fruitfulfarm.ing">Email Us</a>
+        <h1>Welcome to Fruitful Farming</h1>
+        <p>We're cultivating something incredible for you. Stay tuned for our launch!</p>
+        <a href="mailto:hello@fruitfulfarm.ing">Contact Us</a>
     </div>
     <footer>
-        © 2024 Fruitful Farm. All rights reserved.
+        © 2024 Fruitful Farming. All rights reserved.
     </footer>
 </body>
 </html>
