--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column; /* Ensure the elements are stacked vertically */
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh; /* Use min-height instead of height to ensure full vertical stretch */
             background: url('background.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #ffffff;
@@ -24,6 +25,8 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            width: 90%; /* Adjust width for better responsiveness */
+            max-width: 600px; /* Limit max width for larger screens */
         }
         h1 {
             font-family: 'Ubuntu', sans-serif;
