update color palette

--- a/index.html
+++ b/index.html
@@ -25,30 +25,30 @@
             min-height: 100vh; /* Use min-height instead of height to ensure full vertical stretch */
             background: url('background.jpg') no-repeat center center fixed;
             background-size: cover;
-            color: #ffffff;
+            background-color: #fcba03;
+            color: #fcba03;
         }
         .container {
             text-align: center;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: #fcba03;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             width: 90%; /* Adjust width for better responsiveness */
             max-width: 600px; /* Limit max width for larger screens */
         }
         h1 {
             font-family: 'Ubuntu', sans-serif;
-            color: #ade488;
+            color: #014512;
         }
         p {
-            color: #d4d4d4;
+            color: #014512;
         }
         a {
             display: inline-block;
             padding: 10px 20px;
             margin-top: 20px;
-            background: #76b947;
-            color: white;
+            background: #014512;
+            color: #fcba03;
             text-decoration: none;
             border-radius: 5px;
             transition: transform 0.3s ease;
@@ -61,8 +61,8 @@
             text-align: center;
             width: 100%;
             padding: 10px 0;
-            background: rgba(0, 0, 0, 0.7);
-            color: #fff;
+            background: #fcba03;
+            color: #014512;
             font-size: 0.75em;
         }
     </style>
