Remove year from footer copyright notice

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <a href="mailto:hello@fruitfulfarm.ing">Contact Us</a>
     </div>
     <footer>
-        © 2024 Fruitful Farming. All rights reserved.
+        © Fruitful Farming. All rights reserved.
     </footer>
 </body>
 </html>
